Edited nav so that the revealed nav is fixed positioned and covers left side of page when view width decreases, and added white background to show nav button. Added event.preventDefault() functions in main.js so that when 'Show Nav' or 'Hide Nav' are clicked, page does not reset

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -29,7 +29,7 @@
 
 .container {
   width: 950px;
-  margin: 0 auto;
+  margin: 0 auto 0 100px;
 }
 
 header {
@@ -41,6 +41,13 @@ header {
   border-bottom: solid 1px rgb(179, 179, 179)
 }
 
+.show-nav-links{
+  background: white;
+  width: 70px;
+  height: 40px;
+  padding: 0 5px;
+  border-radius: 4px;
+}
 
 .logo {
   // width: 300px;
@@ -86,10 +93,15 @@ header {
 nav {
   position: fixed;
   top: 0;
-  left: 10px;
+  left: 0;
   display: flex;
   flex-direction: column;
   z-index: 1;
+  padding: 10px;
+  background: white;
+  border-radius: 4px;
+  height: 100%;
+  width: 90px;
   a {
     text-decoration: none;
     font-size: 13px;
